--- a/memenstyle.css
+++ b/memenstyle.css
@@ -4,70 +4,109 @@
     font-family: "Baloo 2", cursive;
     text-align: center;
 }
-ul { /*paramètre bandeau */
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgba(171, 1, 49, 0.5);
-    text-align: left;
-    border-radius: 20px;  
-}
-li { /*position boutons */
-    display: inline;
-   }
-  /*texte bandeau*/
-li a, .dropbtn {
-    display: inline-flex;
-    color: rgb(0, 0, 0);
-    padding: 15px 55px;
-    text-align: left;
-    text-decoration: none;
-
-  }
-   /*position et couleur bouton plus */
-.active {
-    background-color: rgb(240, 189, 24);
-    float: right;
-  }
-  
-  /* Change la couleur au survol/hover */
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(73, 73, 73);
-    color: wheat;
-    transition-duration: 0.4s; 
-}
-li.dropdown {
-    display: inline;
-}
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: rgba(171, 1, 49, 0.5);
-    min-width: 160px;
-    box-shadow: rgb(73, 73, 73);
-    z-index: 1000;
-}
-.dropdown-content a {
-    color: wheat;
-    padding: 12px 16px;
-    text-decoration: none;
+#logo {
+    width: 150px;
+    height: 75px;
     display: block;
-    text-align: left;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+#logo2 {
+    width: 150px;
+    height: 75px;
+    margin-top: 0px;
+    margin-left: 30px;
     float: left;
-}
- /*Afficher le menu déroulant en survol*/
-.dropdown-content a:hover {
-    background-color: rgb(73, 73, 73);
-}
-.dropdown:hover .dropdown-content {
     display: block;
+    position: absolute;
+}
+h1 {
+    margin-top: 10px;
+}
+*{
+    margin: 0px;
+    padding: 0px;
+    transition-duration: 0.5s;
+    border-radius: 25px;
+    
+}
+
+nav{ /*bar de nav*/
+    width: 90%;
+    margin: 35px auto;
+    background-color:rgba(171, 1, 49, 0.5);
+    position: sticky;
+    top:0px;
+    
+}
+
+nav ul{
+    list-style-type: none;
+    display: flex;
+}
+
+nav ul li{ /*parametre boutons bardenav*/
+    flex: 1 1 auto;
+    text-align: center;
+    position: relative;
+}
+
+nav ul::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+nav a{
+    display: block;
+    text-decoration: none;
+    color: black;
+    border-bottom: 0px;
+    padding: 10px 30px
+}
+
+nav a:hover{
+    color: orange;
+    border-bottom: 3px solid orangered;
+    background-color: gray;
+    }
+
+.sous{  /*menu deroulant*/
+    display: none;
+    box-shadow: 0px 1px 2px rgba(204, 204, 204, 0.521);
+    background-color: rgba(171, 1, 49, 0.315);
+    position: absolute;
+    width: 100%;
+    z-index: 1000;
+    
+}
+
+nav > ul li:hover .sous{
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.sous li{
+    flex: 1 1 auto;
+    text-align: left;
+}
+
+.sous a{ /*bouttons menu deroulant*/
+    padding: 10px;
+    border-bottom: none;
+}
+
+.sous a:hover{ /*survol bouttons menu deroulant*/
+    border-bottom: none;
+    background-color: gray;
+}
+
+.deroulant > a::after{
+    content:" ▼";
+    font-size: 12px;
+}
+
+.active{
+    background-color: rgb(240, 189, 24);
+    
 }
