--- a/memenstyle.css
+++ b/memenstyle.css
@@ -7,22 +7,33 @@
 #logo {
     width: 150px;
     height: 75px;
-    display: block;
     margin-top: 30px;
     margin-left: 30px;
+    display: block;
+    float: left;
 }
 #logo2 {
     width: 150px;
     height: 75px;
-    margin-top: 0px;
-    margin-left: 30px;
-    float: left;
+    margin-top: 30px;
+    margin-right: 30px;
+    border-radius: 0px;
+    float: right;
     display: block;
-    position: absolute;
+    position: relative;
+    
+}
+#coding {
+    width: 300px;
+    height: 300px;
+    margin-right: 110px;
 }
 h1 {
-    margin-top: 10px;
+    margin-top: 50px;
+    position: relative;
+    top: 0px;
 }
+
 *{
     margin: 0px;
     padding: 0px;
@@ -34,6 +45,7 @@ h1 {
 nav{ /*bar de nav*/
     width: 90%;
     margin: 35px auto;
+    margin-top: 100px ;
     background-color:rgba(171, 1, 49, 0.5);
     position: sticky;
     top:0px;
